--- a/css/materialdesignicons.css
+++ b/css/materialdesignicons.css
@@ -1,8 +1,8 @@
 /* MaterialDesignIcons.com */
 @font-face {
   font-family: "Material Design Icons";
-  src: url("../fonts/materialdesignicons-webfont.eot?v=2.0.46");
-  src: url("../fonts/materialdesignicons-webfont.eot?#iefix&v=2.0.46") format("embedded-opentype"), url("../fonts/materialdesignicons-webfont.woff2?v=2.0.46") format("woff2"), url("../fonts/materialdesignicons-webfont.woff?v=2.0.46") format("woff"), url("../fonts/materialdesignicons-webfont.ttf?v=2.0.46") format("truetype"), url("../fonts/materialdesignicons-webfont.svg?v=2.0.46#materialdesigniconsregular") format("svg");
+  src: url("../fonts/materialdesignicons-webfont.eot?v=2.1.19");
+  src: url("../fonts/materialdesignicons-webfont.eot?#iefix&v=2.1.19") format("embedded-opentype"), url("../fonts/materialdesignicons-webfont.woff2?v=2.1.19") format("woff2"), url("../fonts/materialdesignicons-webfont.woff?v=2.1.19") format("woff"), url("../fonts/materialdesignicons-webfont.ttf?v=2.1.19") format("truetype"), url("../fonts/materialdesignicons-webfont.svg?v=2.1.19#materialdesigniconsregular") format("svg");
   font-weight: normal;
   font-style: normal;
 }
@@ -89,6 +89,10 @@
   content: "\F010";
 }
 
+.mdi-account-multiple-plus-outline:before {
+  content: "\F7FF";
+}
+
 .mdi-account-network:before {
   content: "\F011";
 }
@@ -103,6 +107,10 @@
 
 .mdi-account-plus:before {
   content: "\F014";
+}
+
+.mdi-account-plus-outline:before {
+  content: "\F800";
 }
 
 .mdi-account-remove:before {
@@ -231,6 +239,10 @@
 
 .mdi-all-inclusive:before {
   content: "\F6BD";
+}
+
+.mdi-allo:before {
+  content: "\F801";
 }
 
 .mdi-alpha:before {
@@ -609,6 +621,10 @@
   content: "\F05E";
 }
 
+.mdi-artist:before {
+  content: "\F802";
+}
+
 .mdi-assistant:before {
   content: "\F064";
 }
@@ -619,6 +635,10 @@
 
 .mdi-at:before {
   content: "\F065";
+}
+
+.mdi-atlassian:before {
+  content: "\F803";
 }
 
 .mdi-atom:before {
@@ -647,6 +667,10 @@
 
 .mdi-av-timer:before {
   content: "\F06B";
+}
+
+.mdi-azure:before {
+  content: "\F804";
 }
 
 .mdi-baby:before {
@@ -707,6 +731,10 @@
 
 .mdi-basket-unfill:before {
   content: "\F078";
+}
+
+.mdi-basketball:before {
+  content: "\F805";
 }
 
 .mdi-battery:before {
@@ -783,6 +811,54 @@
 
 .mdi-battery-charging-90:before {
   content: "\F08B";
+}
+
+.mdi-battery-charging-wireless:before {
+  content: "\F806";
+}
+
+.mdi-battery-charging-wireless-10:before {
+  content: "\F807";
+}
+
+.mdi-battery-charging-wireless-20:before {
+  content: "\F808";
+}
+
+.mdi-battery-charging-wireless-30:before {
+  content: "\F809";
+}
+
+.mdi-battery-charging-wireless-40:before {
+  content: "\F80A";
+}
+
+.mdi-battery-charging-wireless-50:before {
+  content: "\F80B";
+}
+
+.mdi-battery-charging-wireless-60:before {
+  content: "\F80C";
+}
+
+.mdi-battery-charging-wireless-70:before {
+  content: "\F80D";
+}
+
+.mdi-battery-charging-wireless-80:before {
+  content: "\F80E";
+}
+
+.mdi-battery-charging-wireless-90:before {
+  content: "\F80F";
+}
+
+.mdi-battery-charging-wireless-alert:before {
+  content: "\F810";
+}
+
+.mdi-battery-charging-wireless-outline:before {
+  content: "\F811";
 }
 
 .mdi-battery-minus:before {
@@ -887,6 +963,10 @@
 
 .mdi-bitbucket:before {
   content: "\F0A8";
+}
+
+.mdi-bitcoin:before {
+  content: "\F812";
 }
 
 .mdi-black-mesa:before {
@@ -1133,6 +1213,10 @@
   content: "\F0D8";
 }
 
+.mdi-briefcase-outline:before {
+  content: "\F813";
+}
+
 .mdi-briefcase-upload:before {
   content: "\F0D9";
 }
@@ -1195,10 +1279,6 @@
 
 .mdi-bullseye:before {
   content: "\F5DD";
-}
-
-.mdi-burst-mode:before {
-  content: "\F5DE";
 }
 
 .mdi-bus:before {
@@ -1425,7 +1505,7 @@
   content: "\F10D";
 }
 
-.mdi-car-convertable:before {
+.mdi-car-convertible:before {
   content: "\F7A6";
 }
 
@@ -1571,6 +1651,10 @@
 
 .mdi-cellphone-settings:before {
   content: "\F123";
+}
+
+.mdi-cellphone-wireless:before {
+  content: "\F814";
 }
 
 .mdi-certificate:before {
@@ -1957,6 +2041,10 @@
   content: "\F167";
 }
 
+.mdi-clover:before {
+  content: "\F815";
+}
+
 .mdi-code-array:before {
   content: "\F168";
 }
@@ -2093,8 +2181,16 @@
   content: "\F185";
 }
 
+.mdi-comment-question:before {
+  content: "\F816";
+}
+
 .mdi-comment-question-outline:before {
   content: "\F186";
+}
+
+.mdi-comment-remove:before {
+  content: "\F5DE";
 }
 
 .mdi-comment-remove-outline:before {
@@ -2159,6 +2255,10 @@
 
 .mdi-content-save-all:before {
   content: "\F194";
+}
+
+.mdi-content-save-outline:before {
+  content: "\F817";
 }
 
 .mdi-content-save-settings:before {
@@ -2425,6 +2525,10 @@
   content: "\F5E8";
 }
 
+.mdi-delete-restore:before {
+  content: "\F818";
+}
+
 .mdi-delete-sweep:before {
   content: "\F5E9";
 }
@@ -2591,6 +2695,18 @@
 
 .mdi-donkey:before {
   content: "\F7C1";
+}
+
+.mdi-door:before {
+  content: "\F819";
+}
+
+.mdi-door-closed:before {
+  content: "\F81A";
+}
+
+.mdi-door-open:before {
+  content: "\F81B";
 }
 
 .mdi-dots-horizontal:before {
@@ -2905,6 +3021,10 @@
   content: "\F210";
 }
 
+.mdi-fan-off:before {
+  content: "\F81C";
+}
+
 .mdi-fast-forward:before {
   content: "\F211";
 }
@@ -3009,6 +3129,10 @@
   content: "\F226";
 }
 
+.mdi-file-percent:before {
+  content: "\F81D";
+}
+
 .mdi-file-plus:before {
   content: "\F751";
 }
@@ -3085,6 +3209,10 @@
   content: "\F236";
 }
 
+.mdi-finance:before {
+  content: "\F81E";
+}
+
 .mdi-find-replace:before {
   content: "\F6D3";
 }
@@ -3117,10 +3245,6 @@
   content: "\F23D";
 }
 
-.mdi-flag-outline-variant:before {
-  content: "\F23E";
-}
-
 .mdi-flag-triangle:before {
   content: "\F23F";
 }
@@ -3129,12 +3253,20 @@
   content: "\F240";
 }
 
+.mdi-flag-variant-outline:before {
+  content: "\F23E";
+}
+
 .mdi-flash:before {
   content: "\F241";
 }
 
 .mdi-flash-auto:before {
   content: "\F242";
+}
+
+.mdi-flash-circle:before {
+  content: "\F81F";
 }
 
 .mdi-flash-off:before {
@@ -3183,6 +3315,10 @@
 
 .mdi-flip-to-front:before {
   content: "\F248";
+}
+
+.mdi-floor-plan:before {
+  content: "\F820";
 }
 
 .mdi-floppy:before {
@@ -3569,6 +3705,10 @@
   content: "\F28C";
 }
 
+.mdi-forum-outline:before {
+  content: "\F821";
+}
+
 .mdi-forward:before {
   content: "\F28D";
 }
@@ -3753,6 +3893,10 @@
   content: "\F2AC";
 }
 
+.mdi-golf:before {
+  content: "\F822";
+}
+
 .mdi-gondola:before {
   content: "\F685";
 }
@@ -3811,6 +3955,10 @@
 
 .mdi-google-glass:before {
   content: "\F2B8";
+}
+
+.mdi-google-home:before {
+  content: "\F823";
 }
 
 .mdi-google-keep:before {
@@ -3895,6 +4043,10 @@
 
 .mdi-guitar-pick-outline:before {
   content: "\F2C6";
+}
+
+.mdi-guy-fawkes-mask:before {
+  content: "\F824";
 }
 
 .mdi-hackernews:before {
@@ -4041,6 +4193,10 @@
   content: "\F2DC";
 }
 
+.mdi-home-account:before {
+  content: "\F825";
+}
+
 .mdi-home-assistant:before {
   content: "\F7CF";
 }
@@ -4051,6 +4207,10 @@
 
 .mdi-home-circle:before {
   content: "\F7D1";
+}
+
+.mdi-home-heart:before {
+  content: "\F826";
 }
 
 .mdi-home-map-marker:before {
@@ -4093,6 +4253,10 @@
   content: "\F2E2";
 }
 
+.mdi-hot-tub:before {
+  content: "\F827";
+}
+
 .mdi-hotel:before {
   content: "\F2E3";
 }
@@ -4103,6 +4267,10 @@
 
 .mdi-houzz-box:before {
   content: "\F2E5";
+}
+
+.mdi-hulu:before {
+  content: "\F828";
 }
 
 .mdi-human:before {
@@ -4143,6 +4311,10 @@
 
 .mdi-humble-bundle:before {
   content: "\F743";
+}
+
+.mdi-ice-cream:before {
+  content: "\F829";
 }
 
 .mdi-image:before {
@@ -4211,6 +4383,10 @@
 
 .mdi-image-multiple:before {
   content: "\F2F9";
+}
+
+.mdi-image-off:before {
+  content: "\F82A";
 }
 
 .mdi-import:before {
@@ -4283,6 +4459,10 @@
 
 .mdi-json:before {
   content: "\F626";
+}
+
+.mdi-karate:before {
+  content: "\F82B";
 }
 
 .mdi-keg:before {
@@ -4363,6 +4543,10 @@
 
 .mdi-label-outline:before {
   content: "\F316";
+}
+
+.mdi-ladybug:before {
+  content: "\F82C";
 }
 
 .mdi-lambda:before {
@@ -4463,6 +4647,10 @@
 
 .mdi-lastfm:before {
   content: "\F326";
+}
+
+.mdi-lastpass:before {
+  content: "\F446";
 }
 
 .mdi-launch:before {
@@ -5161,6 +5349,10 @@
   content: "\F39E";
 }
 
+.mdi-notebook:before {
+  content: "\F82D";
+}
+
 .mdi-notification-clear-all:before {
   content: "\F39F";
 }
@@ -5645,6 +5837,10 @@
   content: "\F659";
 }
 
+.mdi-phone-return:before {
+  content: "\F82E";
+}
+
 .mdi-phone-settings:before {
   content: "\F3FD";
 }
@@ -5815,6 +6011,10 @@
 
 .mdi-pokeball:before {
   content: "\F41D";
+}
+
+.mdi-poker-chip:before {
+  content: "\F82F";
 }
 
 .mdi-polaroid:before {
@@ -6033,20 +6233,12 @@
   content: "\F445";
 }
 
-.mdi-rdio:before {
-  content: "\F446";
-}
-
 .mdi-react:before {
   content: "\F707";
 }
 
 .mdi-read:before {
   content: "\F447";
-}
-
-.mdi-readability:before {
-  content: "\F448";
 }
 
 .mdi-receipt:before {
@@ -6477,8 +6669,16 @@
   content: "\F494";
 }
 
+.mdi-shape:before {
+  content: "\F830";
+}
+
 .mdi-shape-circle-plus:before {
   content: "\F65D";
+}
+
+.mdi-shape-outline:before {
+  content: "\F831";
 }
 
 .mdi-shape-plus:before {
@@ -6515,6 +6715,10 @@
 
 .mdi-shield-outline:before {
   content: "\F499";
+}
+
+.mdi-ship-wheel:before {
+  content: "\F832";
 }
 
 .mdi-shopping:before {
@@ -6713,6 +6917,10 @@
   content: "\F4B8";
 }
 
+.mdi-soccer-field:before {
+  content: "\F833";
+}
+
 .mdi-sofa:before {
   content: "\F4B9";
 }
@@ -6853,12 +7061,12 @@
   content: "\F783";
 }
 
-.mdi-stackexchange:before {
-  content: "\F60B";
+.mdi-stack-overflow:before {
+  content: "\F4CC";
 }
 
-.mdi-stackoverflow:before {
-  content: "\F4CC";
+.mdi-stackexchange:before {
+  content: "\F60B";
 }
 
 .mdi-stadium:before {
@@ -7057,6 +7265,10 @@
   content: "\F4EB";
 }
 
+.mdi-table-column:before {
+  content: "\F834";
+}
+
 .mdi-table-column-plus-after:before {
   content: "\F4EC";
 }
@@ -7081,6 +7293,14 @@
   content: "\F4F1";
 }
 
+.mdi-table-of-contents:before {
+  content: "\F835";
+}
+
+.mdi-table-row:before {
+  content: "\F836";
+}
+
 .mdi-table-row-height:before {
   content: "\F4F2";
 }
@@ -7095,6 +7315,10 @@
 
 .mdi-table-row-remove:before {
   content: "\F4F5";
+}
+
+.mdi-table-settings:before {
+  content: "\F837";
 }
 
 .mdi-tablet:before {
@@ -7165,12 +7389,24 @@
   content: "\F502";
 }
 
+.mdi-television-box:before {
+  content: "\F838";
+}
+
 .mdi-television-classic:before {
   content: "\F7F3";
 }
 
+.mdi-television-classic-off:before {
+  content: "\F839";
+}
+
 .mdi-television-guide:before {
   content: "\F503";
+}
+
+.mdi-television-off:before {
+  content: "\F83A";
 }
 
 .mdi-temperature-celsius:before {
@@ -7375,6 +7611,10 @@
 
 .mdi-tower-fire:before {
   content: "\F681";
+}
+
+.mdi-towing:before {
+  content: "\F83B";
 }
 
 .mdi-trackpad:before {
@@ -7593,6 +7833,10 @@
   content: "\F552";
 }
 
+.mdi-upload-multiple:before {
+  content: "\F83C";
+}
+
 .mdi-upload-network:before {
   content: "\F6F5";
 }
@@ -7693,6 +7937,10 @@
   content: "\F564";
 }
 
+.mdi-venmo:before {
+  content: "\F578";
+}
+
 .mdi-verified:before {
   content: "\F565";
 }
@@ -7707,6 +7955,26 @@
 
 .mdi-video-3d:before {
   content: "\F7FC";
+}
+
+.mdi-video-4k-box:before {
+  content: "\F83D";
+}
+
+.mdi-video-input-antenna:before {
+  content: "\F83E";
+}
+
+.mdi-video-input-component:before {
+  content: "\F83F";
+}
+
+.mdi-video-input-hdmi:before {
+  content: "\F840";
+}
+
+.mdi-video-input-svideo:before {
+  content: "\F841";
 }
 
 .mdi-video-off:before {
@@ -7735,6 +8003,10 @@
 
 .mdi-view-dashboard:before {
   content: "\F56E";
+}
+
+.mdi-view-dashboard-variant:before {
+  content: "\F842";
 }
 
 .mdi-view-day:before {
@@ -7779,10 +8051,6 @@
 
 .mdi-vimeo:before {
   content: "\F577";
-}
-
-.mdi-vine:before {
-  content: "\F578";
 }
 
 .mdi-violin:before {
@@ -7847,6 +8115,10 @@
 
 .mdi-vpn:before {
   content: "\F582";
+}
+
+.mdi-vuejs:before {
+  content: "\F843";
 }
 
 .mdi-walk:before {
@@ -8113,6 +8385,14 @@
   content: "\F5B8";
 }
 
+.mdi-xamarin:before {
+  content: "\F844";
+}
+
+.mdi-xamarin-outline:before {
+  content: "\F845";
+}
+
 .mdi-xaml:before {
   content: "\F673";
 }
@@ -8193,8 +8473,20 @@
   content: "\F67F";
 }
 
+.mdi-youtube-creator-studio:before {
+  content: "\F846";
+}
+
+.mdi-youtube-gaming:before {
+  content: "\F847";
+}
+
 .mdi-youtube-play:before {
   content: "\F5C3";
+}
+
+.mdi-youtube-tv:before {
+  content: "\F448";
 }
 
 .mdi-zip-box:before {
