--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -5,7 +5,7 @@ $mdi-font-weight:      "regular";
 $mdi-font-path:        "../fonts" !default;
 $mdi-font-size-base:   24px !default;
 $mdi-css-prefix:       mdi !default;
-$mdi-version:          "2.0.46" !default;
+$mdi-version:          "2.1.19" !default;
 
 $mdi-icons: (
     "access-point": F002,
@@ -26,10 +26,12 @@ $mdi-icons: (
     "account-multiple-minus": F5D3,
     "account-multiple-outline": F00F,
     "account-multiple-plus": F010,
+    "account-multiple-plus-outline": F7FF,
     "account-network": F011,
     "account-off": F012,
     "account-outline": F013,
     "account-plus": F014,
+    "account-plus-outline": F800,
     "account-remove": F015,
     "account-search": F016,
     "account-settings": F630,
@@ -62,6 +64,7 @@ $mdi-icons: (
     "alert-octagram": F766,
     "alert-outline": F02A,
     "all-inclusive": F6BD,
+    "allo": F801,
     "alpha": F02B,
     "alphabetical": F02C,
     "altimeter": F5D7,
@@ -156,9 +159,11 @@ $mdi-icons: (
     "arrow-up-drop-circle": F062,
     "arrow-up-drop-circle-outline": F063,
     "arrow-up-thick": F05E,
+    "artist": F802,
     "assistant": F064,
     "asterisk": F6C3,
     "at": F065,
+    "atlassian": F803,
     "atom": F767,
     "attachment": F066,
     "audiobook": F067,
@@ -166,6 +171,7 @@ $mdi-icons: (
     "auto-upload": F069,
     "autorenew": F06A,
     "av-timer": F06B,
+    "azure": F804,
     "baby": F06C,
     "baby-buggy": F68E,
     "backburger": F06D,
@@ -181,6 +187,7 @@ $mdi-icons: (
     "basket": F076,
     "basket-fill": F077,
     "basket-unfill": F078,
+    "basketball": F805,
     "battery": F079,
     "battery-10": F07A,
     "battery-20": F07B,
@@ -200,6 +207,18 @@ $mdi-icons: (
     "battery-charging-60": F089,
     "battery-charging-80": F08A,
     "battery-charging-90": F08B,
+    "battery-charging-wireless": F806,
+    "battery-charging-wireless-10": F807,
+    "battery-charging-wireless-20": F808,
+    "battery-charging-wireless-30": F809,
+    "battery-charging-wireless-40": F80A,
+    "battery-charging-wireless-50": F80B,
+    "battery-charging-wireless-60": F80C,
+    "battery-charging-wireless-70": F80D,
+    "battery-charging-wireless-80": F80E,
+    "battery-charging-wireless-90": F80F,
+    "battery-charging-wireless-alert": F810,
+    "battery-charging-wireless-outline": F811,
     "battery-minus": F08C,
     "battery-negative": F08D,
     "battery-outline": F08E,
@@ -226,6 +245,7 @@ $mdi-icons: (
     "bio": F0A6,
     "biohazard": F0A7,
     "bitbucket": F0A8,
+    "bitcoin": F812,
     "black-mesa": F0A9,
     "blackberry": F0AA,
     "blender": F0AB,
@@ -287,6 +307,7 @@ $mdi-icons: (
     "briefcase": F0D6,
     "briefcase-check": F0D7,
     "briefcase-download": F0D8,
+    "briefcase-outline": F813,
     "briefcase-upload": F0D9,
     "brightness-1": F0DA,
     "brightness-2": F0DB,
@@ -303,7 +324,6 @@ $mdi-icons: (
     "bulletin-board": F0E5,
     "bullhorn": F0E6,
     "bullseye": F5DD,
-    "burst-mode": F5DE,
     "bus": F0E7,
     "bus-articulated-end": F79B,
     "bus-articulated-front": F79C,
@@ -360,7 +380,7 @@ $mdi-icons: (
     "car": F10B,
     "car-battery": F10C,
     "car-connected": F10D,
-    "car-convertable": F7A6,
+    "car-convertible": F7A6,
     "car-estate": F7A7,
     "car-hatchback": F7A8,
     "car-pickup": F7A9,
@@ -397,6 +417,7 @@ $mdi-icons: (
     "cellphone-link": F121,
     "cellphone-link-off": F122,
     "cellphone-settings": F123,
+    "cellphone-wireless": F814,
     "certificate": F124,
     "chair-school": F125,
     "chart-arc": F126,
@@ -493,6 +514,7 @@ $mdi-icons: (
     "cloud-sync": F63F,
     "cloud-tags": F7B5,
     "cloud-upload": F167,
+    "clover": F815,
     "code-array": F168,
     "code-braces": F169,
     "code-brackets": F16A,
@@ -527,7 +549,9 @@ $mdi-icons: (
     "comment-plus-outline": F183,
     "comment-processing": F184,
     "comment-processing-outline": F185,
+    "comment-question": F816,
     "comment-question-outline": F186,
+    "comment-remove": F5DE,
     "comment-remove-outline": F187,
     "comment-text": F188,
     "comment-text-outline": F189,
@@ -544,6 +568,7 @@ $mdi-icons: (
     "content-paste": F192,
     "content-save": F193,
     "content-save-all": F194,
+    "content-save-outline": F817,
     "content-save-settings": F61B,
     "contrast": F195,
     "contrast-box": F196,
@@ -610,6 +635,7 @@ $mdi-icons: (
     "delete-circle": F682,
     "delete-empty": F6CB,
     "delete-forever": F5E8,
+    "delete-restore": F818,
     "delete-sweep": F5E9,
     "delete-variant": F1C1,
     "delta": F1C2,
@@ -652,6 +678,9 @@ $mdi-icons: (
     "dolby": F6B2,
     "domain": F1D7,
     "donkey": F7C1,
+    "door": F819,
+    "door-closed": F81A,
+    "door-open": F81B,
     "dots-horizontal": F1D8,
     "dots-horizontal-circle": F7C2,
     "dots-vertical": F1D9,
@@ -730,6 +759,7 @@ $mdi-icons: (
     "facebook-messenger": F20E,
     "factory": F20F,
     "fan": F210,
+    "fan-off": F81C,
     "fast-forward": F211,
     "fast-forward-outline": F6D1,
     "fax": F212,
@@ -756,6 +786,7 @@ $mdi-icons: (
     "file-outline": F224,
     "file-pdf": F225,
     "file-pdf-box": F226,
+    "file-percent": F81D,
     "file-plus": F751,
     "file-powerpoint": F227,
     "file-powerpoint-box": F228,
@@ -775,6 +806,7 @@ $mdi-icons: (
     "filter-remove": F234,
     "filter-remove-outline": F235,
     "filter-variant": F236,
+    "finance": F81E,
     "find-replace": F6D3,
     "fingerprint": F237,
     "fire": F238,
@@ -783,11 +815,12 @@ $mdi-icons: (
     "flag": F23B,
     "flag-checkered": F23C,
     "flag-outline": F23D,
-    "flag-outline-variant": F23E,
     "flag-triangle": F23F,
     "flag-variant": F240,
+    "flag-variant-outline": F23E,
     "flash": F241,
     "flash-auto": F242,
+    "flash-circle": F81F,
     "flash-off": F243,
     "flash-outline": F6D4,
     "flash-red-eye": F67A,
@@ -800,6 +833,7 @@ $mdi-icons: (
     "flattr": F246,
     "flip-to-back": F247,
     "flip-to-front": F248,
+    "floor-plan": F820,
     "floppy": F249,
     "flower": F24A,
     "folder": F24B,
@@ -896,6 +930,7 @@ $mdi-icons: (
     "format-wrap-tight": F28A,
     "format-wrap-top-bottom": F28B,
     "forum": F28C,
+    "forum-outline": F821,
     "forward": F28D,
     "foursquare": F28E,
     "fridge": F28F,
@@ -942,6 +977,7 @@ $mdi-icons: (
     "glasses": F2AA,
     "gmail": F2AB,
     "gnome": F2AC,
+    "golf": F822,
     "gondola": F685,
     "google": F2AD,
     "google-analytics": F7CB,
@@ -957,6 +993,7 @@ $mdi-icons: (
     "google-drive": F2B6,
     "google-earth": F2B7,
     "google-glass": F2B8,
+    "google-home": F823,
     "google-keep": F6DB,
     "google-maps": F5F5,
     "google-nearby": F2B9,
@@ -978,6 +1015,7 @@ $mdi-icons: (
     "guitar-electric": F2C4,
     "guitar-pick": F2C5,
     "guitar-pick-outline": F2C6,
+    "guy-fawkes-mask": F824,
     "hackernews": F624,
     "hamburger": F684,
     "hand-pointing-right": F2C7,
@@ -1014,9 +1052,11 @@ $mdi-icons: (
     "history": F2DA,
     "hololens": F2DB,
     "home": F2DC,
+    "home-account": F825,
     "home-assistant": F7CF,
     "home-automation": F7D0,
     "home-circle": F7D1,
+    "home-heart": F826,
     "home-map-marker": F5F8,
     "home-modern": F2DD,
     "home-outline": F6A0,
@@ -1027,9 +1067,11 @@ $mdi-icons: (
     "hospital": F2E0,
     "hospital-building": F2E1,
     "hospital-marker": F2E2,
+    "hot-tub": F827,
     "hotel": F2E3,
     "houzz": F2E4,
     "houzz-box": F2E5,
+    "hulu": F828,
     "human": F2E6,
     "human-child": F2E7,
     "human-female": F649,
@@ -1040,6 +1082,7 @@ $mdi-icons: (
     "human-male-female": F2E8,
     "human-pregnant": F5CF,
     "humble-bundle": F743,
+    "ice-cream": F829,
     "image": F2E9,
     "image-album": F2EA,
     "image-area": F2EB,
@@ -1057,6 +1100,7 @@ $mdi-icons: (
     "image-filter-tilt-shift": F2F7,
     "image-filter-vintage": F2F8,
     "image-multiple": F2F9,
+    "image-off": F82A,
     "import": F2FA,
     "inbox": F686,
     "inbox-arrow-down": F2FB,
@@ -1075,6 +1119,7 @@ $mdi-icons: (
     "jira": F303,
     "jsfiddle": F304,
     "json": F626,
+    "karate": F82B,
     "keg": F305,
     "kettle": F5FA,
     "key": F306,
@@ -1095,6 +1140,7 @@ $mdi-icons: (
     "kodi": F314,
     "label": F315,
     "label-outline": F316,
+    "ladybug": F82C,
     "lambda": F627,
     "lamp": F6B4,
     "lan": F317,
@@ -1120,6 +1166,7 @@ $mdi-icons: (
     "laptop-off": F6E6,
     "laptop-windows": F325,
     "lastfm": F326,
+    "lastpass": F446,
     "launch": F327,
     "lava-lamp": F7D4,
     "layers": F328,
@@ -1294,6 +1341,7 @@ $mdi-icons: (
     "note-plus": F39C,
     "note-plus-outline": F39D,
     "note-text": F39E,
+    "notebook": F82D,
     "notification-clear-all": F39F,
     "npm": F6F6,
     "nuke": F6A3,
@@ -1415,6 +1463,7 @@ $mdi-icons: (
     "phone-outgoing": F3FB,
     "phone-paused": F3FC,
     "phone-plus": F659,
+    "phone-return": F82E,
     "phone-settings": F3FD,
     "phone-voip": F3FE,
     "pi": F3FF,
@@ -1458,6 +1507,7 @@ $mdi-icons: (
     "plus-outline": F704,
     "pocket": F41C,
     "pokeball": F41D,
+    "poker-chip": F82F,
     "polaroid": F41E,
     "poll": F41F,
     "poll-box": F420,
@@ -1512,10 +1562,8 @@ $mdi-icons: (
     "ray-start-arrow": F443,
     "ray-start-end": F444,
     "ray-vertex": F445,
-    "rdio": F446,
     "react": F707,
     "read": F447,
-    "readability": F448,
     "receipt": F449,
     "record": F44A,
     "record-rec": F44B,
@@ -1623,7 +1671,9 @@ $mdi-icons: (
     "set-right": F77E,
     "settings": F493,
     "settings-box": F494,
+    "shape": F830,
     "shape-circle-plus": F65D,
+    "shape-outline": F831,
     "shape-plus": F495,
     "shape-polygon-plus": F65E,
     "shape-rectangle-plus": F65F,
@@ -1633,6 +1683,7 @@ $mdi-icons: (
     "shield": F498,
     "shield-half-full": F77F,
     "shield-outline": F499,
+    "ship-wheel": F832,
     "shopping": F49A,
     "shopping-music": F49B,
     "shovel": F70F,
@@ -1682,6 +1733,7 @@ $mdi-icons: (
     "snowflake": F716,
     "snowman": F4B7,
     "soccer": F4B8,
+    "soccer-field": F833,
     "sofa": F4B9,
     "solid": F68C,
     "sort": F4BA,
@@ -1717,8 +1769,8 @@ $mdi-icons: (
     "square-inc-cash": F4CB,
     "square-outline": F762,
     "square-root": F783,
+    "stack-overflow": F4CC,
     "stackexchange": F60B,
-    "stackoverflow": F4CC,
     "stadium": F71F,
     "stairs": F4CD,
     "standard-definition": F7EE,
@@ -1768,16 +1820,20 @@ $mdi-icons: (
     "tab-plus": F75B,
     "tab-unselected": F4EA,
     "table": F4EB,
+    "table-column": F834,
     "table-column-plus-after": F4EC,
     "table-column-plus-before": F4ED,
     "table-column-remove": F4EE,
     "table-column-width": F4EF,
     "table-edit": F4F0,
     "table-large": F4F1,
+    "table-of-contents": F835,
+    "table-row": F836,
     "table-row-height": F4F2,
     "table-row-plus-after": F4F3,
     "table-row-plus-before": F4F4,
     "table-row-remove": F4F5,
+    "table-settings": F837,
     "tablet": F4F6,
     "tablet-android": F4F7,
     "tablet-ipad": F4F8,
@@ -1795,8 +1851,11 @@ $mdi-icons: (
     "teamviewer": F500,
     "telegram": F501,
     "television": F502,
+    "television-box": F838,
     "television-classic": F7F3,
+    "television-classic-off": F839,
     "television-guide": F503,
+    "television-off": F83A,
     "temperature-celsius": F504,
     "temperature-fahrenheit": F505,
     "temperature-kelvin": F506,
@@ -1848,6 +1907,7 @@ $mdi-icons: (
     "tor": F52A,
     "tower-beach": F680,
     "tower-fire": F681,
+    "towing": F83B,
     "trackpad": F7F7,
     "traffic-light": F52B,
     "train": F52C,
@@ -1902,6 +1962,7 @@ $mdi-icons: (
     "untappd": F551,
     "update": F6AF,
     "upload": F552,
+    "upload-multiple": F83C,
     "upload-network": F6F5,
     "usb": F553,
     "van-passenger": F7F9,
@@ -1927,10 +1988,16 @@ $mdi-icons: (
     "vector-square": F001,
     "vector-triangle": F563,
     "vector-union": F564,
+    "venmo": F578,
     "verified": F565,
     "vibrate": F566,
     "video": F567,
     "video-3d": F7FC,
+    "video-4k-box": F83D,
+    "video-input-antenna": F83E,
+    "video-input-component": F83F,
+    "video-input-hdmi": F840,
+    "video-input-svideo": F841,
     "video-off": F568,
     "video-switch": F569,
     "view-agenda": F56A,
@@ -1938,6 +2005,7 @@ $mdi-icons: (
     "view-carousel": F56C,
     "view-column": F56D,
     "view-dashboard": F56E,
+    "view-dashboard-variant": F842,
     "view-day": F56F,
     "view-grid": F570,
     "view-headline": F571,
@@ -1949,7 +2017,6 @@ $mdi-icons: (
     "view-stream": F575,
     "view-week": F576,
     "vimeo": F577,
-    "vine": F578,
     "violin": F60F,
     "visualstudio": F610,
     "vk": F579,
@@ -1966,6 +2033,7 @@ $mdi-icons: (
     "volume-off": F581,
     "volume-plus": F75C,
     "vpn": F582,
+    "vuejs": F843,
     "walk": F583,
     "wall": F7FD,
     "wallet": F584,
@@ -2032,6 +2100,8 @@ $mdi-icons: (
     "wrap": F5B6,
     "wrench": F5B7,
     "wunderlist": F5B8,
+    "xamarin": F844,
+    "xamarin-outline": F845,
     "xaml": F673,
     "xbox": F5B9,
     "xbox-controller": F5BA,
@@ -2052,6 +2122,9 @@ $mdi-icons: (
     "yeast": F5C1,
     "yelp": F5C2,
     "yin-yang": F67F,
+    "youtube-creator-studio": F846,
+    "youtube-gaming": F847,
     "youtube-play": F5C3,
+    "youtube-tv": F448,
     "zip-box": F5C4
 );
